DONE: AppendBlob, StorageQueue, AzureTable

--- a/NLog.Azure.Tests/nlog.config
+++ b/NLog.Azure.Tests/nlog.config
@@ -7,11 +7,12 @@
       throwExceptions="true"
       internalLogLevel="Off">
   <extensions>
-    <add assembly="NLog.AzureStorage" />
+    <add assembly="NLog.Azure" />
   </extensions>
   <targets>
+    <target type="Console" name="console" layout="${longdate} ${uppercase:${level}} ${message}" />
     <target xsi:type="AsyncWrapper"
-            name="asyncWrapperSelf"
+            name="asyncAppendBlob"
             queueLimit="1000"
             timeToSleepBetweenBatches="50"
             batchSize="200"
@@ -19,15 +20,46 @@
       <target type="AzureAppendBlob"
               name="appendBlob"
               layout="${longdate} ${logger}:${uppercase:${level}} ${message} ${exception:format=tostring}"
-              connectionString="FILEME"
+              connectionString="FILLME"
               subFolderPath="subFolder"
               container="logtest"
               blobName="${shortdate}.log" />
     </target>
-    <target type="Console" name="console" layout="${longdate} ${uppercase:${level}} ${message}" />
+    <target xsi:type="AsyncWrapper"
+            name="asyncStorageQueue"
+            queueLimit="1000"
+            timeToSleepBetweenBatches="50"
+            batchSize="200"
+            overflowAction="Grow">
+      <target type="AzureStorageQueue" name="azureStorageQueue"
+              layout="${longdate} ${logger}:${uppercase:${level}} ${message} ${exception:format=tostring}"
+              connectionString="FILLME"
+              queueName="logger"/>
+    </target>
+
+    <target xsi:type="AsyncWrapper"
+            name="asyncStorageTable"
+            queueLimit="1000"
+            timeToSleepBetweenBatches="50"
+            batchSize="200"
+            overflowAction="Grow">
+    <target type="AzureTable" name="azureTable"
+            layout="${longdate} ${logger}:${uppercase:${level}} ${message} ${exception:format=tostring}"
+            connectionString="FILLME"
+            tableName="logger"
+            partitionKey="loggerTest"/>
+    </target>
   </targets>
+  
 
   <rules>
-    <logger name="*" minlevel="Trace" writeTo="asyncWrapperSelf" />
+    <!--<logger name="*" minlevel="Trace" writeTo="asyncWrapperSelf" />-->
+    <!--<logger name="*" minlevel="Trace" writeTo="appendBlob" />-->
+
+    <!--<logger name="*" minlevel="Trace" writeTo="azureStorageQueue" />-->
+    <!--<logger name="*" minlevel="Trace" writeTo="asyncStorageQueue" />-->
+
+    <!--<logger name="*" minlevel="Trace" writeTo="azureTable" />-->
+    <!--<logger name="*" minlevel="Trace" writeTo="asyncStorageTable" />-->
   </rules>
 </nlog>
