--- a/NLog.Azure.Tests/NLog.Azure.Tests.csproj
+++ b/NLog.Azure.Tests/NLog.Azure.Tests.csproj
@@ -10,4 +10,14 @@
     <PackageReference Include="NLog.Extensions.Logging" Version="1.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\NLog.Azure\NLog.Azure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="nlog.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
