--- a/NLog.Azure/NLog.Azure.csproj
+++ b/NLog.Azure/NLog.Azure.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <Version>0.0.3</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <PackageLicenseUrl>https://github.com/Itoktsnhc/NLog.Azure/blob/master/LICENSE</PackageLicenseUrl>
     <Copyright>itoktsnhc@hotmail.com</Copyright>
     <PackageProjectUrl>https://github.com/Itoktsnhc/NLog.Azure</PackageProjectUrl>
     <RepositoryUrl>https://github.com/Itoktsnhc/NLog.Azure</RepositoryUrl>
-    <Description>NLog to Azure</Description>
+    <Description>https://github.com/Itoktsnhc/NLog.Azure/blob/master/README.md</Description>
     <PackageId>Itok.NLog.Azure</PackageId>
     <Authors>itoktsnhc</Authors>
     <Company />
