--- a/NLog.Azure/NLog.Azure.csproj
+++ b/NLog.Azure/NLog.Azure.csproj
@@ -17,6 +17,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.EventHubs" Version="2.0.0" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.1.1" />
   </ItemGroup>
