--- a/NLog.Azure.Tests/NLog.Azure.Tests.csproj
+++ b/NLog.Azure.Tests/NLog.Azure.Tests.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <None Update="nlog.config">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
