--- a/NLog.Azure.Tests/nlog.config
+++ b/NLog.Azure.Tests/nlog.config
@@ -4,7 +4,7 @@
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd"
       autoReload="true"
-      throwExceptions="true"
+      throwExceptions="false"
       internalLogLevel="Off">
   <extensions>
     <add assembly="NLog.Azure" />
@@ -25,6 +25,7 @@
               container="logtest"
               blobName="${shortdate}.log" />
     </target>
+    
     <target xsi:type="AsyncWrapper"
             name="asyncStorageQueue"
             queueLimit="1000"
@@ -49,6 +50,17 @@
               tableName="logger"
               partitionKey="loggerTest" />
     </target>
+
+    <target xsi:type="AsyncWrapper"
+            name="asyncEventHubWrapper"
+            queueLimit="1000"
+            timeToSleepBetweenBatches="50"
+            batchSize="30"
+            overflowAction="Grow">
+      <target type="AzureEventHub" name="azureEventHub"
+              layout="${longdate} ${logger}:${uppercase:${level}} ${message} ${exception:format=tostring}"
+              connectionString="FILLME" />
+    </target>
   </targets>
 
 
@@ -61,5 +73,8 @@
 
     <!--<logger name="*" minlevel="Trace" writeTo="azureTable" />-->
     <!--<logger name="*" minlevel="Trace" writeTo="asyncStorageTable" />-->
+
+    <logger name="*" minlevel="Trace" writeTo="azureEventHub" />
+    <!--<logger name="*" minlevel="Trace" writeTo="asyncEventHubWrapper" />-->
   </rules>
 </nlog>
